--- a/public/css/style.css
+++ b/public/css/style.css
@@ -714,8 +714,7 @@ input[type=number]::-webkit-inner-spin-button {
     margin-top: 30px;
     text-align: center;
 }
-
-/* Touches for UX */
-#destination, #from-date, #to-date, #amount, #edit-seat-count{
-    pointer-events: none;
+#todate-holder{
+    max-height: 0;
+    visibility: hidden;
 }
