--- a/public/css/style.css
+++ b/public/css/style.css
@@ -158,7 +158,7 @@ nav li:hover::after{
     transition: all 0.3s ease;
 }
 
-/* Destinations Menu */
+/* Destinations Menu Styles */
 .search-tour{
     display: flex;
     justify-content: center;
@@ -189,6 +189,13 @@ nav li:hover::after{
 .search-tour button:hover{
     background-color:#223656;
     color: #EED590;
+}
+#error-display{
+    width: 100%;
+    text-align: center;
+    margin-top: 10px;
+    color: #f04a4a;
+    font-family: 'Montserrat', sans-serif;
 }
 .by-two{
     display: flex;
@@ -580,7 +587,7 @@ input[type=number]::-webkit-inner-spin-button {
     border-radius: 15px;
 }
 .div-tour-details{
-    margin-top: 40px;
+    margin: 40px;
     display: flex;
     align-items: center;
     padding: 20px;
@@ -717,4 +724,24 @@ input[type=number]::-webkit-inner-spin-button {
 #todate-holder{
     max-height: 0;
     visibility: hidden;
+}
+#index-footer{
+    position: absolute;
+    background-color: rgba(22, 36, 56, 0.7);
+    color:#EED590;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: auto;
+    text-align: center;
+    padding: 10px;
+    bottom: 0;
+    width: 98%;
+}
+footer{
+    position: relative;
+    background-color: rgba(22, 36, 56, 0.7);
+    color:#EED590;
+    font-family: 'Montserrat', sans-serif;
+    margin-top: auto;
+    text-align: center;
+    padding: 10px;
 }
