--- a/public/css/media-queries.css
+++ b/public/css/media-queries.css
@@ -31,6 +31,9 @@
     .by-two{
         display: block;
     }
+    #accordion-container{
+        width: 100% !important;
+    }
   }
 @media screen and (max-width: 700px) {
     #home, #signin{
@@ -184,7 +187,7 @@
         background: rgb(67,217,192);
         background: linear-gradient(90deg, rgba(67,217,192,0.8) 0%, rgba(238,213,144,0.8) 80%);
     }
-    .tour-details label{
+    .tour-details label, #payment-desc{
         font-size: 0.8em;
     }
     .button-group{
