--- a/public/css/style.css
+++ b/public/css/style.css
@@ -419,10 +419,6 @@ nav li:hover::after{
     color:#f04a4a;
     list-style: none;
 }
-/* input[type="password"]::-webkit-credentials-auto-fill-button {
-    font-size: 2em;
-    line-height: 1;
-} */
 #btn-signup{
     pointer-events: none;
     background-color: #f2a979;
@@ -579,6 +575,18 @@ input[type=number]::-webkit-inner-spin-button {
     padding: 10px 20px;
     background-color: rgba(238,213,144,1);
     border-radius: 15px;
+}
+#tour-note{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 600px;
+    padding: 10px;
+    margin-top: 20px;
+    border-radius: 15px;
+    background-color: #EED590;
+    font-family: 'Shantell Sans', cursive;
+    color: #f04a4a;
+    font-size: 1em;
 }
 .div-tour-details{
     margin: 40px;
